# web_be

./: .gitignore  Cargo.toml  README.md
.agent/workflows/: design.md
.jules/: sentinel.md
.sqlx/: query-1550b66e14417049d08517bdf19a17f8b273f5365a0134c7874c713c097c032e.json  query-240261982eff1045a7cff5f37de5e45ae5f003ee1b38b279e8b5bc2a57056876.json  query-92cea1d45ceb7ec32a066e48c359a265ebfb6187aeea972b5aacd7610743e385.json  query-bd78f506b1d34a2619cf16f65d7977cdc635b37969a5706af3851e473c46bc20.json  query-d85dab323f97b676c1e5b4209c2a066f3508740e0c0dfc7eebe0489ec88193e5.json  query-ebac5014aa9a66a880d60f041d48c08e08480805082c5e19a365f061b2dd55ef.json  query-ecac207b343c6d5620db2e81cfb2a205403307deea93b05155730e5639ede8a8.json
bru/: bruno.json  edit profile.bru  login user 1.bru  login user 2.bru  login.bru  refresh token.bru  register.bru  upload_avatar.bru
bru/Friend/: accept friend request from 1.bru  accept friend request from 2.bru  accept request.bru  delete friend 1.bru  delete friend 2.bru  delete friend.bru  folder.bru  get friend list.bru  pending requests.bru  (+4 more)
checkList/: 00_SUMMARY.md  01_axum.md  02_tokio.md  03_tower_tower_http.md  04_tower_governor_governor.md  05_sqlx.md  06-10_data_libraries.md  11-15_security_libraries.md  16-22_external_utilities.md  PERFORMANCE_REPORT_2026-01-08.md  PERFORMANCE_REPORT_2026-01-09.md  PERFORMANCE_REPORT_2026-01-10.md  SECURITY_REPORT_2026-01-08.md  SECURITY_REPORT_2026-01-09.md  SECURITY_REPORT_2026-01-10.md  TODO.md
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
tests/: password_validation_test.rs
(+44 files in other folders)
